# piperf3

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/piperf3/: __init__.py  cli.py  constants.py  display.py  models.py  plotting.py  runner.py
tests/: smoke_test.py
