[project]
name = "piperf3"
version = "0.0.7"
description = "A Python wrapper for iperf3 with configuration management, plotting, and CLI interface"
readme = "README.md"
authors = [
    { name = "Sam Welborn", email = "swelborn@lbl.gov" }
]
requires-python = ">=3.12"
dependencies = [
    "seaborn>=0.12.0",
    "matplotlib>=3.10.6",
    "typer>=0.17.3",
    "pyyaml>=6.0.2",
    "pandas>=2.3.2",
    "rich>=14.1.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.7",
    "numpy>=2.3.2",
    "pydantic-settings>=2.10.1",
]

[project.scripts]
piperf3 = "piperf3:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors (includes E402 - imports not at top)
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "UP006",  # Use built-in generics (dict, list, etc.)
    "UP007",  # Use X | Y for Union types
    "UP038",  # Use X | Y in isinstance calls
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions (better list/dict comprehensions)
    "SIM",    # flake8-simplify (simplify code)
    "PIE",    # flake8-pie (miscellaneous improvements)
    "RUF",    # Ruff-specific rules
    "TID",    # flake8-tidy-imports (import hygiene)
    "PLC0415", # import-outside-top-level (pylint)
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "SIM108", # Use ternary operator (sometimes less readable)
    "B008",   # Allow function calls in argument defaults (required for typer)
] 

[tool.ruff.lint.isort]
known-first-party = ["piperf3"]
force-single-line = false
combine-as-imports = true
